--- a/app/src/main/res/layout/fragment_target.xml
+++ b/app/src/main/res/layout/fragment_target.xml
@@ -7,18 +7,18 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_title_label"
+        android:text="@string/target_title_label"
         style="?android:listSeparatorTextViewStyle"
         />
     <EditText android:id="@+id/crime_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/crime_title_hint"
+        android:hint="@string/target_title_hint"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_details_label"
+        android:text="@string/target_details_label"
         style="?android:listSeparatorTextViewStyle"
         />
     <Button android:id="@+id/crime_date"
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:text="@string/crime_solved_label"
+        android:text="@string/target_solved_label"
     />
 
     <Button android:id="@+id/crime_suspect"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:text="@string/crime_suspect_text"
+        android:text="@string/target_collaboration_text"
         />
 
     <Button android:id="@+id/crime_report"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:text="@string/crime_report_text"
+        android:text="@string/target_report_text"
         />
 
 </LinearLayout>
