--- a/app/src/main/res/menu/fragment_target.xml
+++ b/app/src/main/res/menu/fragment_target.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/menu_item_delete_crime"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/delete_crime"
+        android:title="@string/delete_target"
         app:showAsAction="ifRoom|withText" />
 
 </menu>
